--- a/bmc_template/paper.bib
+++ b/bmc_template/paper.bib
@@ -765,3 +765,15 @@
 	pdf = "data/papers/etfa2018_vonasek.pdf"
 }
 
+
+@article{nguyen2018art,
+  title={ART-RRT: As-Rigid-As-Possible exploration of ligand unbinding pathways},
+  author={Nguyen, Minh Khoa and Jaillet, L{\'e}onard and Redon, Stephane},
+  journal={Journal of computational chemistry},
+  volume={39},
+  number={11},
+  pages={665--678},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
